# log-guardian

./: .env.example  .gitignore  Makefile  README.md  project_tree.txt  pyproject.toml  readers.py  requirements.txt
configs/: base.yaml  dev.yaml  prod.yaml
docker/: Dockerfile  compose.yaml
scripts/: score_file.py  serve_api.py  train_model.py
src/log_guardian/: __init__.py  cli.py  config.py  logging_setup.py  utils.py
src/log_guardian/api/: __init__.py  app.py  schemas.py
src/log_guardian/features/: __init__.py  build_features.py
src/log_guardian/ingestion/: __init__.py  readers.py  schemas.py
src/log_guardian/modeling/: __init__.py  postprocess.py  predict.py  train.py
src/log_guardian/rules/: __init__.py  signatures.py
tests/: conftest.py  test_api.py  test_features.py  test_modeling.py  test_readers.py
